--- a/Plot/README
+++ b/Plot/README
@@ -1,10 +1,24 @@
 
+############################
+# for MVA: input variables #
+
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testPlotInputVariables.cfg
+    r00t AMPlotMacroCreator_Moriond.cxx
+    
+     -> new variables
+
+     
+     
+backup
+====
+
+
 ##########################
 #### MC distributions ####
 
 
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
-r00t AMPlotMacroCreator_Moriond.cxx
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForNote.cfg
+    r00t AMPlotMacroCreator_Moriond.cxx
 
 
 ######################################################
@@ -12,11 +26,11 @@ r00t AMPlotMacroCreator_Moriond.cxx
 
 
 
-rm -r output_Latinos_tree_2012_2orMoreJet2012
-mkdir output_Latinos_tree_2012_2orMoreJet2012
-ls --color=none output_Latinos_tree_2012/ | tr "@" " " |  awk '{print "./bin/FilterCut.exe output_Latinos_tree_2012/"$1" output_Latinos_tree_2012_2orMoreJet2012/"$1" 2orMoreJet2012"}'   &> skim2orMoreJet.sh
-chmod +x skim2orMoreJet.sh
-./skim2orMoreJet.sh
+    rm -r output_Latinos_tree_2012_2orMoreJet2012
+    mkdir output_Latinos_tree_2012_2orMoreJet2012
+    ls --color=none output_Latinos_tree_2012/ | tr "@" " " |  awk '{print "./bin/FilterCut.exe output_Latinos_tree_2012/"$1" output_Latinos_tree_2012_2orMoreJet2012/"$1" 2orMoreJet2012"}'   &> skim2orMoreJet.sh
+    chmod +x skim2orMoreJet.sh
+    ./skim2orMoreJet.sh
 
 
 
@@ -27,28 +41,20 @@ chmod +x skim2orMoreJet.sh
 #####################################
 # for MVA: top enriched phase space #
 
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_MVA.cfg
-r00t AMPlotMacroCreator_Moriond.cxx
+     ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_MVA.cfg
+    r00t AMPlotMacroCreator_Moriond.cxx
 
 
 
 
-
-############################
-# for MVA: input variables #
-
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testPlotInputVariables.cfg
-r00t AMPlotMacroCreator_Moriond.cxx
-
- -> new variables
 
  
  
 #########################################
 # check possible mjj cut based analysis #
 
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testOptimization.cfg
-r00t AMPlotMacroCreator_Moriond.cxx
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testOptimization.cfg
+    r00t AMPlotMacroCreator_Moriond.cxx
 
 
 
@@ -58,17 +64,21 @@ r00t AMPlotMacroCreator_Moriond.cxx
 
 
 # create distributions
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForOptimization.cfg
+
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForOptimization.cfg
 
 # integrate distributions
-./bin/MCDATAPlotCutOptimization.exe test/WW2jewk/Plot/CutOptimization.cfg 
+    
+    ./bin/MCDATAPlotCutOptimization.exe test/WW2jewk/Plot/CutOptimization.cfg 
 
 # then look at the root file obtained "by hand"
-r00t AMPlotMacroCreator_HCP.cxx
+    
+    r00t AMPlotMacroCreator_HCP.cxx
 
 
 # propaganda plot for mll shape analysis
-r00t Plot_AM_VH_testPropaganda_Normal.C+
+    
+    r00t Plot_AM_VH_testPropaganda_Normal.C+
 
 
 
@@ -77,11 +87,11 @@ r00t Plot_AM_VH_testPropaganda_Normal.C+
 #### control plot for AN ####
 
 
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForNote_ControlPlot.cfg
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForNote_ControlPlot.cfg
 
-r00t AMPlotMacroCreator_Moriond_ControlPlot.cxx
+    r00t AMPlotMacroCreator_Moriond_ControlPlot.cxx
 
---> also at Higgs level
+    --> also at Higgs level
 
 
 
@@ -90,9 +100,9 @@ r00t AMPlotMacroCreator_Moriond_ControlPlot.cxx
 #### control plot for HWW review ####
 
 
-./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForHWWreview.cfg
+    ./bin/MCDATAComparisonPLOTTool.exe test/WW2jewk/Plot/testMCDATAComparisonPLOTTool_ForHWWreview.cfg
 
-r00t AMPlotMacroCreator_Moriond.cxx
+    r00t AMPlotMacroCreator_Moriond.cxx
 
 
 
